# Contrary-Whiteboard

./: .gitignore  .npmrc  C++StandardHeaderFile.txt  CMakeLists.txt  COPYRIGHT  ContraryWhiteboard.pro  README.md  build.bat  build.sh  build_macos.sh  build_macos_classic.sh  build_windows.bat  build_windows_classic.bat  electron-builder.config.js  package-lock.json  package.json  version.txt  webpack.config.js
.github/workflows/: build-release.yml  build.yml
cmake/: DependencyPoppler.cmake  DependencyQt.cmake  DependencyQuaZip.cmake  DependencyZlib.cmake
installer/: ContraryWhiteboard.iss  ContraryWhiteboard.nsi
main/: auto-updater.js  display-manager.js  file-manager.js  ipc-handlers.js  main.js  menu.js
plugins/cffadaptor/: UBCFFAdaptor.pro
plugins/cffadaptor/src/: CMakeLists.txt
renderer/: App.jsx  index.html
renderer/commands/: AddObjectCommand.js  CommandHistory.js  DeleteObjectCommand.js  MoveObjectCommand.js  TransformCommand.js
renderer/components/BottomBar/: BottomBar.jsx
renderer/components/Canvas/: CanvasRenderer.js  CoordinateSystem.js  GeometryOverlays.js  InputHandler.js  PageCanvas.jsx
renderer/components/Pages/: PagePanel.jsx  PageThumbnail.jsx
renderer/components/Properties/: PenProperties.jsx  PropertiesPanel.jsx  ShapeProperties.jsx  TextProperties.jsx
renderer/components/Settings/: SettingsModal.jsx
renderer/components/Toolbar/: BackgroundPicker.jsx  LeftToolbar.jsx  ToolButton.jsx
renderer/components/common/: ColorPicker.jsx  ContextMenu.jsx  Modal.jsx  Slider.jsx
renderer/export/: exportImage.js  exportPDF.js  exportSVG.js  exportUBZ.js  importPDF.js
renderer/store/: documentStore.js  settingsStore.js  toolStore.js  uiStore.js
renderer/styles/: global.css
renderer/tools/: CompassTool.js  EraserTool.js  HighlighterTool.js  LaserTool.js  LineTool.js  PenTool.js  SelectorTool.js  ShapeTool.js  TextTool.js
renderer/utils/: bezier.js  geometry.js  hitTest.js  uuid.js
resources/: OpenBoard.qrc
resources/etc/: Contrary Whiteboard.config
resources/forms/: documents.ui  mainWindow.ui
resources/web/: whiteboard.html
resources/win/: ContraryWhiteboard.rc
src/adaptors/: UBExportDocument.cpp  UBExportDocumentSetAdaptor.cpp  UBImportCFF.cpp  UBImportDocument.cpp
src/board/: UBBoardController.cpp  UBBoardPaletteManager.cpp  UBBoardView.cpp  UBBoardView.h
src/core/: UB.h  UBApplication.cpp  UBApplication.h  UBPreferencesController.cpp  UBPreferencesController.h  UBSettings.cpp  UBSettings.h  UBShortcutManager.h
src/desktop/: UBDesktopAnnotationController.cpp
src/document/: UBDocumentController.cpp
src/domain/: UBGraphicsMediaItem.cpp  UBGraphicsMediaItemDelegate.cpp  UBGraphicsScene.cpp
src/frameworks/: CMakeLists.txt  UBFileSystemUtils.cpp  UBPlatformUtils.cpp  UBPlatformUtils.h  UBPlatformUtils_mac.mm  UBPlatformUtils_win.cpp
src/gui/: CMakeLists.txt  UBAIBackend.cpp  UBAIBackend.h  UBAIChatPanel.cpp  UBAIChatPanel.h  UBFloatingPalette.cpp  UBJoinDialog.cpp  UBJoinDialog.h  UBMagnifer.cpp  UBMainWindow.cpp  UBMainWindow.h  UBMessageWindow.cpp  UBRubberBand.cpp  UBScreenMirror.cpp  UBThemeManager.cpp  UBThemeManager.h  gui.pri
src/podcast/: UBPodcastController.cpp
src/podcast/windowsmedia/: UBWindowsMediaFile.h
src/sharing/: UBNgrokManager.cpp  UBNgrokManager.h  UBSharingController.cpp  UBSharingController.h  UBSharingServer.cpp  UBSharingServer.h  sharing.pri
src/tools/: UBGraphicsProtractor.cpp
src/web/: UBEmbedController.cpp
thirdpartydeps/: libs.pri
thirdpartydeps/quazip/: quazip.pro
